add object copy unit test